--- a/yddk-02.ini
+++ b/yddk-02.ini
@@ -66,13 +66,13 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🐸 手动切换
 
 custom_proxy_group=🐸 手动切换`select`.*
-custom_proxy_group=🇭🇰 香港节点`select`(?=.*(香港|广港|Hong Kong|🇭🇰|HongKong))^((?!(深港|US|家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇯🇵 日本节点`select`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|广日|JP|Japan))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇸🇬 加坡节点`select`(?=.*(新加坡|坡|新|SG|Singapore))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇹🇼 台湾节点`select`(?=.*(广台|台湾|台|湾))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong|深港)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|🇯🇵)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 新加坡节点`url-test`(广新|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🍃 香港均衡`load-balance`(?=.*(香港|广港|Hong Kong|🇭🇰|HongKong))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
 
 ;启用自定义规则集
