--- a/yddk20260106.ini
+++ b/yddk20260106.ini
@@ -48,34 +48,61 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 
-;设置节点分组标志位
+;==================================================
+; 二、基础动作组（必须最先）
+;==================================================
+custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🎮 游戏平台`select`[]🎮游戏节点`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连
+
+
+;==================================================
+; 三、纯节点筛选组（不引用任何其他组）
+;==================================================
+custom_proxy_group=🎮游戏节点`select`(游戏|Game|Gaming|🎮)
+
+custom_proxy_group=🇭🇰 香港节点`select`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|家宽|游戏|剩余|流量)).)*$
+custom_proxy_group=🇯🇵 日本节点`select`(?=.*(日本|东京|大阪|JP|Japan))^((?!(家宽|游戏|剩余|流量)).)*$
+custom_proxy_group=🇸🇬 新加坡节点`select`(?=.*(新加坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量)).)*$
+custom_proxy_group=🇺🇸 美国节点`select`(?=.*(美国|US|United States|洛杉矶|圣何塞|西雅图|芝加哥))^((?!(深港|家宽|游戏|剩余|流量)).)*$
+custom_proxy_group=🇹🇼 台湾节点`select`(?=.*(台湾|TW|Taiwan))^((?!(家宽|游戏|剩余|流量)).)*$
+custom_proxy_group=🌐 其他地区`select`(?=.*(德国|英国|法国|荷兰|加拿大|澳大利亚|俄罗斯))^((?!(家宽|游戏|剩余|流量)).)*$
+
+
+;==================================================
+; 四、Fallback（依赖节点组，必须在后）
+;==================================================
+custom_proxy_group=🔯 香港故转`fallback`[]🇭🇰 香港节点`http://cp.cloudflare.com/generate_204`300,,50
+
+
+;==================================================
+; 五、业务策略组（最后定义，绝不前向引用）
+;==================================================
+custom_proxy_group=🎮 游戏平台`select`[]🎮游戏节点`[]♻️ 自动选择`[]🚀 手动切换
+
 custom_proxy_group=🎥 Netflix`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌐 其他地区`[]🔯 香港故转`[]♻️ 自动选择`[]🚀 手动切换
-custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌐 其他地区`[]🔯 香港故转`[]♻️ 自动选择`[]🚀 手动切换
-custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌐 其他地区`[]🔯 香港故转`[]♻️ 自动选择`[]🚀 手动切换
-custom_proxy_group=🕊️ Twitter(X)`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌐 其他地区`[]🔯 香港故转`[]♻️ 自动选择`[]🚀 手动切换
+
+custom_proxy_group=🚀 GitHub`select`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]♻️ 自动选择`[]🚀 手动切换
+
+custom_proxy_group=📲 Telegram`select`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]♻️ 自动选择`[]🚀 手动切换
+
+custom_proxy_group=🕊️ Twitter(X)`select`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]♻️ 自动选择`[]🚀 手动切换
+
 custom_proxy_group=🤖 AI服务`select`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🌐 其他地区`[]♻️ 自动选择`[]🚀 手动切换
-custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌐 其他地区`[]🔯 香港故转`[]♻️ 自动选择`[]🚀 手动切换
-custom_proxy_group=📹 YouTube`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌐 其他地区`[]🔯 香港故转`[]♻️ 自动选择`[]🚀 手动切换
-custom_proxy_group=🌎 国外媒体`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌐 其他地区`[]🔯 香港故转`[]♻️ 自动选择`[]🚀 手动切换
-custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌐 其他地区`[]🔯 香港故转`[]♻️ 自动选择`[]🚀 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌐 其他地区`[]🔯 香港故转`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🎮 游戏节点`select`(游戏|Game|Gaming|🎮)
-custom_proxy_group=🇭🇰 香港节点`select`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|US|家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇯🇵 日本节点`select`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇸🇬 新加坡节点`select`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇺🇸 美国节点`select`(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))^((?!(深港|家宽|游戏|剩余|流量)).)*$
-custom_proxy_group=🇹🇼 台湾节点`select`(?=.*(台|新北|彰化|TW|Taiwan))^((?!(深港|US|家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🌐 其他地区`select`(?=.*(德国|英国|法国|荷兰|加拿大|澳大利亚|俄罗斯))^((?!(深港|US|家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🔯 香港故转`fallback`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0)).)*$`http://cp.cloudflare.com/generate_204`300,,50
+
+custom_proxy_group=🎶 TikTok`select`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]♻️ 自动选择`[]🚀 手动切换
+
+custom_proxy_group=📹 YouTube`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]♻️ 自动选择`[]🚀 手动切换
+
+custom_proxy_group=🌍 国外媒体`select`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]♻️ 自动选择`[]🚀 手动切换
+
+custom_proxy_group=🇬 谷歌服务`select`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]♻️ 自动选择`[]🚀 手动切换
+
+custom_proxy_group=🐟 漏网之鱼`select`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连
 
 
-
-
-
-;下方参数请勿修改
+;==================================================
+; 固定参数
+;==================================================
 enable_rule_generator=true
 overwrite_original_rules=true
