--- a/yddk20260106.ini
+++ b/yddk20260106.ini
@@ -62,7 +62,7 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT
 
 
 
-
+custom_proxy_group=🎮 游戏节点`select`(?=.*(游戏|Game|Gaming))
 custom_proxy_group=🇭🇰 香港节点`select`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|US|家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
 custom_proxy_group=🇯🇵 日本节点`select`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
 custom_proxy_group=🇸🇬 新加坡节点`select`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
@@ -78,5 +78,6 @@ custom_proxy_group=🔯 香港故转`fallback`(?=.*(香港|HK|Hong Kong|🇭🇰
 ;下方参数请勿修改
 enable_rule_generator=true
 overwrite_original_rules=true
+
 
 
