--- a/yddk20260106002.ini
+++ b/yddk20260106002.ini
@@ -49,7 +49,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 ;设置节点分组标志位
-
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌐 其他地区`[]🔯 香港故转`[]♻️ 自动选择`[]🚀 手动切换
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎮 游戏平台`select`[]Game节点`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连
